# assignment

./: .env  .env.example  Cargo.toml  Dockerfile  Dockerfile-client  Readme.md  build.rs  docker-compose-db.yml  docker-compose.yml  schema.sql
proto/: authetications.proto
src/: client.functional.test.rs  client.rs  lib.rs  main.rs  server.functional.test.rs  server.rs
